--- a/AnalisisFaltasLaLiga22-23.ipynb
+++ b/AnalisisFaltasLaLiga22-23.ipynb
@@ -20,10 +20,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Datos de la tabla campogramas\n",
     "conexion = psycopg2.connect(user ='postgres',\n",
     "                            password = 'sergio',\n",
     "                            host = 'localhost',\n",
@@ -42,6 +43,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Datos de la tabla jornada_equipos para obtener la posesión\n",
+    "def cargarDatosPosesion():\n",
+    "    conexion = psycopg2.connect(user ='postgres', password = 'sergio', host = 'localhost', port = '5432', database = 'futbol')\n",
+    "\n",
+    "    cursor = conexion.cursor()\n",
+    "    sql = 'SELECT id_jornada, id_partido, equipo, formacion, pos, posesion_equipos FROM jornada_equipos'\n",
+    "    cursor.execute(sql)\n",
+    "    filas = cursor.fetchall()\n",
+    "    datos = pd.DataFrame(filas)\n",
+    "\n",
+    "    datos_posesion = pd.DataFrame(filas, columns = ['id_jornada', 'id_partido', 'equipo', 'formacion', 'pos', 'posesion_equipos'])\n",
+    "\n",
+    "    cursor.close()\n",
+    "    conexion.close()\n",
+    "    \n",
+    "    return datos_posesion"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -50,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +363,7 @@
        "[9767 rows x 15 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,6 +381,192 @@
     "                        'resultado_descanso','jugador','accion','x','y']]\n",
     "\n",
     "df_faltas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Tratar los datos de la posesión"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>formacion</th>\n",
+       "      <th>pos</th>\n",
+       "      <th>posesion_equipos</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Athletic Bilbao-Mallorca_Athletic Bilbao_22-23</td>\n",
+       "      <td>4-3-3</td>\n",
+       "      <td>515</td>\n",
+       "      <td>802</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Real Betis-Elche_Real Betis_22-23</td>\n",
+       "      <td>4-2-3-1</td>\n",
+       "      <td>623</td>\n",
+       "      <td>860</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Valencia-Girona_Valencia_22-23</td>\n",
+       "      <td>4-3-3</td>\n",
+       "      <td>365</td>\n",
+       "      <td>791</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Real Valladolid-Villarreal_Real Valladolid_22-23</td>\n",
+       "      <td>4-1-4-1</td>\n",
+       "      <td>458</td>\n",
+       "      <td>885</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Celta Vigo-Espanyol_Celta Vigo_22-23</td>\n",
+       "      <td>4-1-3-2</td>\n",
+       "      <td>555</td>\n",
+       "      <td>926</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>755</th>\n",
+       "      <td>Espanyol-Osasuna_Osasuna_22-23</td>\n",
+       "      <td>4-1-4-1</td>\n",
+       "      <td>514</td>\n",
+       "      <td>861</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>756</th>\n",
+       "      <td>Atletico Madrid-Getafe_Getafe_22-23</td>\n",
+       "      <td>5-3-2</td>\n",
+       "      <td>398</td>\n",
+       "      <td>1064</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>757</th>\n",
+       "      <td>Elche-Villarreal_Villarreal_22-23</td>\n",
+       "      <td>4-3-3</td>\n",
+       "      <td>595</td>\n",
+       "      <td>823</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>758</th>\n",
+       "      <td>Athletic Bilbao-Cadiz_Cadiz_22-23</td>\n",
+       "      <td>4-1-4-1</td>\n",
+       "      <td>512</td>\n",
+       "      <td>888</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>759</th>\n",
+       "      <td>Rayo Vallecano-Almeria_Almeria_22-23</td>\n",
+       "      <td>4-3-3</td>\n",
+       "      <td>451</td>\n",
+       "      <td>880</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>760 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                   id formacion  pos  \\\n",
+       "0      Athletic Bilbao-Mallorca_Athletic Bilbao_22-23     4-3-3  515   \n",
+       "1                   Real Betis-Elche_Real Betis_22-23   4-2-3-1  623   \n",
+       "2                      Valencia-Girona_Valencia_22-23     4-3-3  365   \n",
+       "3    Real Valladolid-Villarreal_Real Valladolid_22-23   4-1-4-1  458   \n",
+       "4                Celta Vigo-Espanyol_Celta Vigo_22-23   4-1-3-2  555   \n",
+       "..                                                ...       ...  ...   \n",
+       "755                    Espanyol-Osasuna_Osasuna_22-23   4-1-4-1  514   \n",
+       "756               Atletico Madrid-Getafe_Getafe_22-23     5-3-2  398   \n",
+       "757                 Elche-Villarreal_Villarreal_22-23     4-3-3  595   \n",
+       "758                 Athletic Bilbao-Cadiz_Cadiz_22-23   4-1-4-1  512   \n",
+       "759              Rayo Vallecano-Almeria_Almeria_22-23     4-3-3  451   \n",
+       "\n",
+       "     posesion_equipos  \n",
+       "0                 802  \n",
+       "1                 860  \n",
+       "2                 791  \n",
+       "3                 885  \n",
+       "4                 926  \n",
+       "..                ...  \n",
+       "755               861  \n",
+       "756              1064  \n",
+       "757               823  \n",
+       "758               888  \n",
+       "759               880  \n",
+       "\n",
+       "[760 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_posesion = cargarDatosPosesion()\n",
+    "df_posesion[['jornada','competicion','temporada']] = df_posesion.id_jornada.str.split('_',expand = True)\n",
+    "\n",
+    "df_posesion['id_equipo'] = df_posesion.id_partido.str.cat(df_posesion.equipo, sep='_')\n",
+    "df_posesion['id'] = df_posesion.id_equipo.str.cat(df_posesion.temporada, sep='_')\n",
+    "\n",
+    "df_posesion = df_posesion.loc[df_posesion['competicion'] == 'LaLiga'].reset_index(drop = True)\n",
+    "df_posesion = df_posesion[['id','formacion','pos','posesion_equipos']]\n",
+    "df_posesion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Importar los datos a Excel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_faltas.to_excel('analisisFaltas.xlsx', index = 'False')\n",
+    "df_posesion.to_excel('analisisPosesionFaltas.xlsx', index = 'False')"
    ]
   }
  ],
